tests/verbatim_scanner/negative/definition_lines.txxt
Expected: []
Term:
    This is a definition content.

Another Term:
    More definition content.